--- a/LandingPage/LandingPage.css
+++ b/LandingPage/LandingPage.css
@@ -369,7 +369,7 @@ body {
     background-image: url("pics/ratedpic-faith.png"); 
   }
   66% {
-    background-image: url("pics/ratedpic-nfda.png");
+    background-image: url("pics/ratedpic-shyna.jpg");
   }
   100% {
     background-image: url("pics/ratedpic-jmr.jpg"); 
