--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -121,11 +121,11 @@ body {
 .navbar .menu-list li a {
   text-decoration: none; /* Remove default underline */
   padding: 10px;
-  font-weight: 500;
-  color: white; /* Normal text color */
+  font-weight: 900;
+  color: #333; /* Normal text color */
   transition: color 0.3s, border-bottom 0.3s;
-  font-weight: 800;
 }
+
 
 /* Underline for the active menu item */
 .navbar .menu-list li a.active {
