--- a/homepage/login.css
+++ b/homepage/login.css
@@ -77,6 +77,7 @@
     outline: none;
   }
 #create-user, #create-pass{
+      top: -56px;
   background-color: transparent;
     position: relative;
     left: -30px;
